--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,28 +1,15 @@
 version: 0.2
+
 phases:
   install:
-    commands:
-      - npm i -g npm@8.5.1 
-      - pip install --upgrade pip
-      - pip install --upgrade awscli
+    runtime-versions:
+      nodejs: 14
   pre_build:
     commands:
-      - echo Pre_build Phase
-      - npm install
+      - echo "Installing dependencies..."
   build:
     commands:
-      - echo Build Phase
-      - npm run build
-
+      - echo "Building static files..."
   post_build:
     commands:
-      - echo PostBuild Phase
-      - aws s3 sync ./build s3://HTML_Learning
-      # - aws cloudfront create-invalidation --distribution-id E713H8OBS9MWP --paths "/*"; 
-      
-
-# artifacts:
-#   files:
-#     - '/*'
-#   discard-path: no
-#   base-directory: build
+      - aws s3 sync ./dist s3://testingernestbucket/
